--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <footer>
             <div class="copyright-text">
-              <p>Copyright 2020 Reflux Design</p>
+              <p>Copyright 2020 Putri Nabila</p>
             </div>
           </footer>
           </div>
