--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>PUTRI NABILA | Resume & Portfolio Website</title>
+    <title>Putri Nabila | Resume & Portfolio Website</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -74,7 +74,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <footer>
             <div class="copyright-text">
-              <p>Copyright 2020 Putri Nabila</p>
+              <p>Copyright &copy; 2020 Putri Nabila</p>
             </div>
           </footer>
           </div>
@@ -87,8 +87,8 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              >I am a hard-working person who aspires to be a professional web developer. 
-              I am currently majoring in Accounting Information System and looking for opportunities that will utilize my skills and challenge me to improve.</span
+              >I am a hard-working person who has a lot of dreams and a person who enjoy learning new things that can improve my capability in a good way.
+               I am currently majoring in Accounting Information System.</span
             >
           </div>
           <div class="left-image-post">
@@ -108,9 +108,9 @@ https://templatemo.com/tm-531-reflux
                     tincidunt quam vitae neque pharetra dignissim eget ut
                     libero.
                   </p>
-                  <div class="white-button">
+                  <!--<div class="white-button">
                     <a href="#">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
@@ -127,9 +127,9 @@ https://templatemo.com/tm-531-reflux
                     Suspendisse potenti. Ut sollicitudin risus a sollicitudin
                     semper.
                   </p>
-                  <div class="white-button">
+                  <!--<div class="white-button">
                     <a href="#">Read More</a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="col-md-6">
@@ -157,7 +157,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="second-service-icon service-icon"></div>
                 <h4>PHP</h4>
                 <p>
-                  PHP programming language, MVC concept, CRUD and and Bootstrap implementation.
+                  PHP programming language, MVC concept, CI, and Bootstrap implementation.
                 </p>
               </div>
             </div>
@@ -166,16 +166,16 @@ https://templatemo.com/tm-531-reflux
                 <div class="first-service-icon service-icon"></div>
                 <h4>MySQL</h4>
                 <p>
-                  Basic use of MySQL database such as Data Definition Laguange (DFD) and Data Manipulation Language (DML).
+                  Basic use of MySQL database such as Data Definition Language (DDL) and Data Manipulation Language (DML).
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Work in Team</h4>
+                <h4>HTML & CSS</h4>
                 <p>
-                  I have the capability to work in teams the same as I work individually.
+                  Creating web design and implementation using HTML, CSS, and JavaScript.
                 </p>
               </div>
             </div>
@@ -253,7 +253,7 @@ https://templatemo.com/tm-531-reflux
                         ><i class="fa fa-search"></i
                       ></a>
                       
-                      <h4>Admin Dashboard</h4>
+                      <h4>Admin Dashboard (Case Study: Bolu Susu Lembang)</h4>
                       <span>Recording Purchase Transaction</span>
                     </figcaption>
                   </figure>
